<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".listUsers.DetailUserFragment">

    <TextView
        android:id="@+id/textViewDetailIdUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDetailIdUser" />
    <TextView
        android:id="@+id/textViewDetailNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDetailNameUser"/>
    <TextView
        android:id="@+id/textViewDetailDescriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDetailDescriptions"/>
    <Button
        android:id="@+id/buttonNavigationEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationEditUser"/>

</LinearLayout>