<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NavigationFragment">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textViewTitleNavigation,buttonNavigationListFruits,buttonNavigationListContacts,
        buttonNavigationHelloUser, buttonNavigationListUsers"
        android:orientation="vertical"
        app:flow_wrapMode="chain"
        app:flow_verticalStyle="packed"
        app:flow_verticalGap="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewTitleNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTitleNavigation"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonNavigationListFruits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationListFruits"/>
    <Button
        android:id="@+id/buttonNavigationListContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationListContacts"/>
    <Button
        android:id="@+id/buttonNavigationHelloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationHelloUser"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/buttonNavigationListUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNavigationListUsers"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>